[gd_scene load_steps=4 format=2]

[ext_resource path="res://matchmaking/player/player_info.gd" type="Script" id=1]
[ext_resource path="res://themes/theme_main_square_button.tres" type="Theme" id=2]
[ext_resource path="res://gui/utils/button_click_sound_utils.gd" type="Script" id=3]

[node name="PlayerInfo" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -666.0
rect_min_size = Vector2( 54, 0 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1918.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.207843, 0.207843, 0.207843, 1 )

[node name="Container" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1918.0
margin_bottom = 412.0

[node name="FactionChoice" type="OptionButton" parent="Container"]
margin_right = 836.0
margin_bottom = 410.0
size_flags_horizontal = 3
disabled = true
text = "no_translate.Faction"
flat = true
align = 1
expand_icon = true

[node name="UsernameInput" type="LineEdit" parent="Container"]
margin_left = 840.0
margin_right = 1676.0
margin_bottom = 410.0
size_flags_horizontal = 3
max_length = 30
editable = false
placeholder_text = "menu.player_info.input_text_placeholder"

[node name="UpdateNameTimer" type="Timer" parent="Container/UsernameInput"]
wait_time = 0.7
one_shot = true

[node name="ReadyInput" type="CheckButton" parent="Container"]
margin_left = 1680.0
margin_right = 1916.0
margin_bottom = 410.0
disabled = true
text = "menu.player_info.ready"
align = 1
script = ExtResource( 3 )
